2.16.2
 - fix: data export feature selection must default to features_loaded
 - enh: added links to docs explaining default export selection
2.16.1
 - setup: bump dclab to 0.58.4 (reduced memory usage when computing
   contour-based features such as volume, export dataset configuration
   as metadata in .tsv export, support both posix and nt relative basin
   paths)
2.16.0
 - feat: enable storage strategy (basin control) in export dialog (#159)
 - fix: ask for .tsv output path before computing statistics
 - enh: color feature data in QuickView combobox according to availability
 - enh: hide basinmap features in scatter plot selections (#159)
 - docs: remove reference to Shape-Out 1 in introduction
 - docs: mention basins and link to dclab (#159)
 - docs: add quick guide for data export
 - ref: reduce usage of `dclab.dfn.scalar_feature_names` (#108)
 - setup: bump dclab to 0.58.2
2.15.5
 - fix: right-click menu not working for plot widgets (#160)
 - ref: introduce `FeatureComboBox` class for listing features
2.15.4
 - fix: very small numbers not parsed when showing metadata (#158)
 - fix: do not allow question mark "?" in exported file names (#156)
 - fix: do not override files when exporting data (#153)
 - fix: remove the "so2exp" prefix when exporting data (#157)
2.15.3
 - build: PyInstaller to rebuild its bootloader (avoid false positive
   malware detection)
2.15.2
 - fix: handle zero-valued contour spacing
 - setup: bump dclab to 0.57.4 (handle zero-valued spacing for KDE contour)
2.15.1
 - fix: statistics not updating when changing plot axes (#154)
 - setup: bump dclab from 0.57.0 to 0.57.1
2.15.0
 - enh: avoid creating hierarchy when no filters are applied (speed)
 - enh: cache computed statistics
 - ref: avoid division-by-zero warning
 - setup: bump dclab from 0.56.3 to 0.57.0 (speed)
2.14.3
 - fix: intermediate plotting of first event whenever a slot is added
 - fix: catch zero-division warning when plotting empty image